--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "rimraf": "^6.0.1",
+    "serve": "^14.2.1",
     "svgo": "^3.3.2",
     "web-vitals": "^4.2.4"
   },
