--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/plugin-transform-private-methods": "^7.25.9",
     "@svgr/plugin-svgo": "^8.1.0",
+    "chart.js": "^4.4.1",
     "cra-template": "1.2.0",
     "lucide-react": "^0.469.0",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "rimraf": "^6.0.1",
